# YAGF

./: AUTHORS  CMakeLists.txt  ChangeLog  DESCRIPTION  INSTALL  README  YAGF.desktop  yagf.spec
src/: BlockAnalysis.cpp  BlockAnalysis.h  CCAnalysis.cpp  CCAnalysis.h  FileChannel.cpp  FileChannel.h  FileToolBar.cpp  FileToolBar.h  PageAnalysis.cpp  PageAnalysis.h  QSelectionLabel.cpp  QSelectionLabel.h  SkewAnalysis.cpp  SkewAnalysis.h  advancedconfigdialog.cpp  advancedconfigdialog.h  advancedconfigdialog.ui  analysis.cpp  analysis.h  ccbuilder.cpp  ccbuilder.h  configdialog.cpp  configdialog.h  configdialog.ui  droplabel.cpp  droplabel.h  ghostscr.cpp  ghostscr.h  imageiomanager.cpp  imageiomanager.h  main.cpp  mainform.cpp  mainform.h  mainform.ui  make_style.sh  moc_FileChannel.cxx  moc_mainform.cxx  pdf2ppt.cpp  pdf2ppt.h  pdfextractor.cpp  (+36 more)
src/translations/: ts_update.sh  yagf_de.ts  yagf_lt.ts  yagf_pl.ts  yagf_ru.ts  yagf_uk.ts
